--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <footer class="py-5 bg-dark text-white text-center border-top border-gold">
         <div class="container">
-            <p class="small text-secondary mb-0">© 2026 LAKE SERIES @Shila Sawangan by: <a href="https://prime.listings.my.id" target="_blank"> Prime Listings</a></p>
+            <p class="small text-secondary mb-0">© 2026 LAKE SERIES @Shila Sawangan by: <a href="https://www.listings.my.id" target="_blank"> Prime Listings</a></p>
 			<p class="small text-secondary mb-0">Member Agent of NAM3 Property - All Rights Reserved</a></p>
         </div>
     </footer>
@@ -458,4 +458,5 @@
         });
     </script>
 </body>
+
 </html>
